force-app/main/default/objects/Order_Category_Discount__c/Order_Category_Discount__c.object-meta.xml
<CustomObject>
    <label>Order Category Discount</label>
    <nameField>
        <label>Order Category Discounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Category Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>