force-app/main/default/objects/Order_Category_Discount__c/fields/Discount_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Discount_Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Optional. The specific product that this discount is related to.</inlineHelpText>
    <label>Discount Related To</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Order Category Discounts (Discount Related To)</relationshipLabel>
    <relationshipName>Order_Category_Discounts1</relationshipName>
    <type>Lookup</type>
</CustomField>