force-app/main/default/objects/Order_Category_Discount__c/fields/Fixed_Discount__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fixed Discount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>