force-app/main/default/objects/Order_Category_Discount__c/fields/Order_Category_Definition__c.field-meta.xml
<CustomField>
    <fullName>Order_Category_Definition__c</fullName>
    <label>Order Category Definition</label>
    <referenceTo>Order_Category_Definition__c</referenceTo>
    <relationshipLabel>Order Category Discounts</relationshipLabel>
    <relationshipName>Order_Category_Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>