force-app/main/default/objects/Order_Category_Discount__c/fields/Percentage_Discount__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percentage Discount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>