force-app/main/default/objects/Order_Category_Discount__c/fields/Quantity_Factor__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Factor__c</fullName>
    <label>Quantity Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>