force-app/main/default/objects/Order_Category_Discount__c/validationRules/Only_One_Discount_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_One_Discount_Type</fullName>
    <active>true</active>
    <description>Prevent save if both Percentage Discount and Fixed Discount are greater than 0</description>
    <errorConditionFormula>AND(
  Percentage_Discount__c &gt; 0,
  Fixed_Discount__c      &gt; 0
)</errorConditionFormula>
    <errorMessage>You may only enter a Percentage Discount or a Fixed Discount, not both. One must be 0 (zero)</errorMessage>
</ValidationRule>