force-app/main/default/objects/Order_Category_Discount__c/validationRules/Require_Quantity_Factor_When_Dynamic_Qua.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Quantity_Factor_When_Dynamic_Qua</fullName>
    <active>true</active>
    <description>Prevent save if Dynamic Quantity is checked but Quantity Factor is blank</description>
    <errorConditionFormula>AND(
  Is_Using_Dynamic_Quantity__c,
  ISBLANK( Quantity_Factor__c )
)</errorConditionFormula>
    <errorDisplayField>Quantity_Factor__c</errorDisplayField>
    <errorMessage>Please enter a Quantity Factor when using Dynamic Quantity.</errorMessage>
</ValidationRule>